--- a/index.html
+++ b/index.html
@@ -36,16 +36,24 @@
 <p id="firstp"></p>
 <p id="secondp"></p> -->
 
-<h2>temprature convertor</h2>
+<!-- <h2>temprature convertor</h2>
 <input type="number" id="num" value="0"> <br><br>
 <input type="radio" id="tofarenhigh" name="temp">
 <label for="tofarenhigh"> celcius => farenhigh  </label><br>
 <input type="radio" id="tocelcius" name="temp">
 <label for="tocelcius">farenhigh => celcius</label><br><br>
 <button type="button" onclick="convert()">submit</button><br><br>
-<p id="result"></p>
+<p id="result"></p> -->
 
 
+<h2>dice iamges</h2>
+<label for="numOfDice"> Roll you dice</label>
+<input type="number" id="numOfDice" min="1">
+<button type="button" onclick="rollDice()">roll your dice</button>
+<p id="dName"></p>
+<div style="display: flex; gap: 20px; align-items: center;">
+<p id="dimage" style="width: 50px;height: 50px; "></p>
+</div>
     <script src="scritp.js"></script>
 </body>
 </html>
