--- a/index.html
+++ b/index.html
@@ -46,14 +46,31 @@
 <p id="result"></p> -->
 
 
-<h2>dice iamges</h2>
+<!-- <h2>dice iamges</h2>
 <label for="numOfDice"> Roll you dice</label>
 <input type="number" id="numOfDice" min="1">
 <button type="button" onclick="rollDice()">roll your dice</button>
 <p id="dName"></p>
 <div style="display: flex; gap: 20px; align-items: center;">
 <p id="dimage" style="width: 50px;height: 50px; "></p>
-</div>
+</div> -->
+
+<h2>simple interest calculator</h2>
+
+<form>
+    <label for="pAmmount">Principal Ammount</label><br>
+    <input id="pAmmount" type="number" > <br><br>
+
+    <label for="interset">interset</label><br>
+    <input id="interest" type="number" ><br><br>
+
+    <label for="months">months</label><br>
+    <input id="months" type="number" ><br><br>
+
+    <button type="button" onclick="calculator()"> submit</button> <br><br>
+
+    <p>your total amount <span id="total"></span></p>
+</form>
     <script src="scritp.js"></script>
 </body>
 </html>
