--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 <p id="dimage" style="width: 50px;height: 50px; "></p>
 </div> -->
 
-<h2>simple interest calculator</h2>
+
+
+
+<!-- <h2>simple interest calculator</h2>
 
 <form>
     <label for="pAmmount">Principal Ammount</label><br>
@@ -70,7 +73,11 @@
     <button type="button" onclick="calculator()"> submit</button> <br><br>
 
     <p>your total amount <span id="total"></span></p>
-</form>
+</form> -->
+
+
+<h2>digital clock</h2>
+<p id="clock">0:0:0</p>
     <script src="scritp.js"></script>
 </body>
 </html>
