--- a/index.html
+++ b/index.html
@@ -76,8 +76,19 @@
 </form> -->
 
 
-<h2>digital clock</h2>
-<p id="clock">0:0:0</p>
+<!-- <h2>digital clock</h2>
+<p id="clock">0:0:0</p> -->
+
+
+
+<h2>stopwatch</h2>
+<div id="watch">00 : 00 : 00 : 00</div>
+
+<button type="button" onclick="start()">start</button>
+<button type="button" onclick="stop()">stop</button>
+<button type="button" onclick="reset()">reset</button>
+
+
     <script src="scritp.js"></script>
 </body>
 </html>
