--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 <button type="button" onclick="stop()">stop</button>
 <button type="button" onclick="reset()">reset</button> -->
 
+
+<!-- 
 <div id="calculator">
     <h2>&nbsp; &nbsp; &nbsp; calculator</h2>
     <input type="text" id="display" readonly>
@@ -111,8 +113,10 @@
         <button onclick="calculate()">=</button><br>
         <button onclick="cleardisplay()">C</button>
     </div>
-</div>
+</div> -->
 
+<h1>use Arrow key to move this emoji 🙂</h1>
+<h2 id="myh2" style="font-size: 50px; position: absolute;">😁</h2>
 
     <script src="scritp.js"></script>
 </body>
