rock-paper-scissor

--- a/index.html
+++ b/index.html
@@ -115,8 +115,27 @@
     </div>
 </div> -->
 
+
+<!-- 
 <h1>use Arrow key to move this emoji 🙂</h1>
-<h2 id="myh2" style="font-size: 50px; position: absolute;">😁</h2>
+<h2 id="myh2" style="font-size: 50px; position: absolute;">😁</h2> -->
+
+<div id="butoons" style="padding-top: 50px; text-align: center;">
+    <button type="button" onclick="playGame('rock')">rock</button>
+    <button type="button" onclick="playGame('paper')">paper</button>
+    <button type="button" onclick="playGame('scissor')">scissor</button><br><br>
+</div>
+
+<div id="result" style="text-align: center;">
+    <h3 id="playerDisplay">Player :</h3>
+    <h3 id="computerDisplay">Computer :</h3>
+    <h3 id="resultDisplay">Result :</h3>
+</div> <br><br>
+
+<div style="text-align: center;">
+    <div id="playerScore">Player Score : 0</div>
+<div id="computerScore">Computer Score : 0</div>
+</div>
 
     <script src="scritp.js"></script>
 </body>
