--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <h1>use Arrow key to move this emoji 🙂</h1>
 <h2 id="myh2" style="font-size: 50px; position: absolute;">😁</h2> -->
 
-<div id="butoons" style="padding-top: 50px; text-align: center;">
+<!-- <div id="butoons" style="padding-top: 50px; text-align: center;">
     <button type="button" onclick="playGame('rock')">rock</button>
     <button type="button" onclick="playGame('paper')">paper</button>
     <button type="button" onclick="playGame('scissor')">scissor</button><br><br>
@@ -135,8 +135,22 @@
 <div style="text-align: center;">
     <div id="playerScore">Player Score : 0</div>
 <div id="computerScore">Computer Score : 0</div>
-</div>
+</div> -->
 
+
+<div class="s">
+    <div class="sliders">
+        <div class="slides">
+            <img class="slide" src="./images//car1.jpg" alt="car1">
+            <img class="slide" src="./images//car2.jpg" alt="car2">
+            <img class="slide" src="./images//car3.jpg" alt="car3">
+            <img class="slide" src="./images//car4.jpg" alt="car4">
+            <img class="slide" src="./images//car5.jpg" alt="car5">
+        </div>
+        <button class="prev" onclick="prev()">&#10094</button>
+        <button class="next" onclick="next()">&#10095</button>
+    </div>
+</div>
     <script src="scritp.js"></script>
 </body>
 </html>
